feat: create documentation from register properties
